# study_note

CodeSpecification/: 架构组成部分.textfile  理想的设计特性.md
android/adb/: adb.txt  adb_command.md  adb打开系统设置.txt  question.md  xiu  安装失败.md  开启网络调试.md
android/application/: Application.md  组件化Application.md
android/as/: aapt_error.md  android_studio常见问题.md  android_studio常见问题.txt  androidx相关异常.txt  gradle_failed.md  gradle代理问题.txt  gradle配置相关.md  gradle问题.md  makejar.md  初始化AS方法.md  默认版本配置
android/base/: handler.md  intent.md  keystore.md  log.md  usb.md  xml.md
android/build_error/: tool_replace.md
c++/base/: cctype  (+4 more)
flutter/: nav.txt
git/: git.md  git.txt  git_error.md  git_error.txt  git_log.md  git_question.md  git_setting.md  git_stash.md  git配置问题.md
gradle/: gradle.md
java/: common.md
mysql/: Untitled.md
network/: OSI模型.md
opengl/: 1_创建窗口.md  2_你好窗口.md  3_你好三角形.md  4_着色器.md  5_纹理.md
opengl/vscode_base_project/: CMakeLists.txt  main.cpp
opengl/vscode_base_project/src/: CMakeLists.txt  glad.c  keyboard_utils.cpp  keyboard_utils.hpp
react_native/: React_Native的ES5_ES6写法对照表  库  相对绝对布局.js  编写规范  联网＋LIST  调试命令  配置淘宝镜像
svn/: SVN常用命令.md  svn_error.txt
windows/: hyper共享文件.md  鼠标右键添加vscode.md
设计模式/: AbstractFactory.md  Adapter.md  Bridge模式.md  Builder.md  ChainOfResponsibility.md  Command.md  Composite.md  Decorator模式.md  FactoryMethod.md  FlyWeight.md  Interpreter.md  Iterator.md  Mediator.md  Memento.md  Prototype.md  Proxy.md  Singleton.md  State.md  Strategy.md  Visitor.md  facade.md  mvc.txt  模板方法.md  策略模式.md  观察者模式.md  设计模式的编目.md  面对对象设计原则.md
(+354 files in other folders)
